# midway-imgtool

./: .gitignore  ADOBE_FEATURES_PROPOSAL.md  AGENTS.md  BUILD.md  CHANGELOG.md  CLEANUP.md  CMakeLists.txt  FEATURE_CLIPBOARD.md  FILE_FORMATS.md  FUNDING.yml  IMGUI_MIGRATION.md  ImgTool.dmg  MENU_FEATURES_GAP.md  QUICKSTART.md  README.md  TOOL_ARCHITECTURE.md  build.bat  build.ps1  deepseek.md  last.md  vcpkg.json
.github/workflows/: c-cpp.yml
IT/: it.c  itimg.asm  itos.asm  wmpstruc.inc
platform/: compat.h  document.h  globals.c  img_format.h  img_io.cpp  img_io.h  imgtool.rc  imgtool_thunks.asm  imgui_overlay.cpp  imgui_overlay.h  itimg_exports.h  load2_verify.cpp  load2_verify.h  lod_parser.cpp  lod_parser.h  main.cpp  mk2_hitbox.cpp  mk2_hitbox.h  shim_dialog.c  shim_file.c  shim_file.h  shim_file_thunks.asm  shim_input.c  shim_input.h  shim_vid.c  shim_vid.h
test/: mk2_roundtrip_test.cpp
